--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -5,16 +5,17 @@ body {
   padding: 0;
 }
 
-.save-note {
+.save-note, 
+.clear-form, 
+.new-note {
   display: none;
+  cursor: pointer;
 }
 
 .icons i {
-  margin-left: 15px;
-  margin-right: 15px;
-  font-size: 1.5rem;
-  cursor: pointer;
+  margin-right: 5px;
 }
+
 
 .note-textarea,
 .note-title {
